--- a/public/viewTables.html
+++ b/public/viewTables.html
@@ -16,11 +16,36 @@
 
 </head>
 
-<body>
-  <h1>
-    <i class="fas fa-camera-retro"></i>
-  </h1>
-  <script type="text/css">
+<div class="jumbotron">
+  <h1 class="display-4 text-center"><i class="fab fa-gripfire"></i>Hot Resturant</h1>
+  <p class="lead text-center">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+  <hr class="my-4">
+  <p class="text-center">It uses utility classes for typography and spacing to space content out within the larger container.</p>
+  <p class="lead d-flex justify-content-center">
+    <a class="btn btn-primary btn-lg mx-2" href="#" role="button"><i class="fas fa-home"></i>Home</a>
+    <a class="btn btn-primary btn-lg mx-2" href="#" role="button"><i class="far fa-clipboard"></i>Make Reservation</a>
+  </p>
+</div>
+
+<div class="card mb-3 ">
+  <div class="card-header"><h2 class="text-center">Tables</h2></div>
+  <div class="card-body">
+    <ul id="tables" class="list-group list-group-flush">
+      <li class="list-group-item">All Tables are open</li>
+    </ul>
+  </div>
+</div>
+
+<div class="card mb-3">
+  <div class="card-header"><h2 class="text-center">Waitlist</h2></div>
+  <div class="card-body">
+      <ul id="waitlist" class="list-group list-group-flush">
+        <li class="list-group-item" >No one waiting</li>
+      </ul>
+    </div>
+</div>
+
+<script type="text/css">
     
   </script>
 </body>
