--- a/public/viewTables.html
+++ b/public/viewTables.html
@@ -15,7 +15,7 @@
 
 
 </head>
-
+<body>
 <div class="jumbotron">
   <h1 class="display-4 text-center"><i class="fab fa-gripfire"></i>Hot Resturant</h1>
   <p class="lead text-center">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
