Added a POST method

--- a/public/reservations.html
+++ b/public/reservations.html
@@ -22,7 +22,7 @@
   <div class="container">
     <h2 class="display-4">Make a Reservation With Us!</h2>
     <hr class="my-4">
-    <form>
+    <form method="POST" role="form">
       <div class="form-group">
         <label for="name">Name</label>
         <input type="name" class="form-control mb-4" id="name" placeholder="John Doe">
