added links to reroute

--- a/public/reservations.html
+++ b/public/reservations.html
@@ -15,8 +15,8 @@
     <hr class="my-4">
     <p  class="text-center">It uses utility classes for typography and spacing to space content out within the larger container.</p>
     <p class="lead d-flex justify-content-center">
-      <a class="btn btn-primary btn-lg mx-2" href="#" role="button">Home</a>
-      <a class="btn btn-primary btn-lg mx-2" href="#" role="button">Tables</a>
+      <a class="btn btn-primary btn-lg mx-2" href="/" role="button">Home</a>
+      <a class="btn btn-primary btn-lg mx-2" href="/tables" role="button">Tables</a>
     </p>
   </div>
   <div class="container">
