--- a/public/viewTables.html
+++ b/public/viewTables.html
@@ -22,8 +22,8 @@
   <hr class="my-4">
   <p class="text-center">It uses utility classes for typography and spacing to space content out within the larger container.</p>
   <p class="lead d-flex justify-content-center">
-    <a class="btn btn-primary btn-lg mx-2" href="#" role="button"><i class="fas fa-home"></i>Home</a>
-    <a class="btn btn-primary btn-lg mx-2" href="#" role="button"><i class="far fa-clipboard"></i>Make Reservation</a>
+    <a class="btn btn-primary btn-lg mx-2" href="/" role="button"><i class="fas fa-home"></i>Home</a>
+    <a class="btn btn-primary btn-lg mx-2" href="/reservations" role="button"><i class="far fa-martini"></i>Make Reservation</a>
   </p>
 </div>
 
