--- a/public/reservations.html
+++ b/public/reservations.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.css" />
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-  <title>Document</title>
+  <title>Hot Restuarant | Make RSVP</title>
+    <!-- Jquery -->
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
+
 <body>
   <div class="jumbotron">
     <h1 class="display-4 text-center">Hot Resturant</h1>
     <p class="lead text-center">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
     <hr class="my-4">
-    <p  class="text-center">It uses utility classes for typography and spacing to space content out within the larger container.</p>
+    <p class="text-center">It uses utility classes for typography and spacing to space content out within the larger container.</p>
     <p class="lead d-flex justify-content-center">
-      <a class="btn btn-primary btn-lg mx-2" href="/" role="button">Home</a>
-      <a class="btn btn-primary btn-lg mx-2" href="/tables" role="button">Tables</a>
+      <a class="btn btn-primary btn-lg mx-2" href="/" role="button">
+        <i class="fas fa-home"></i> Home</a>
+      <a class="btn btn-primary btn-lg mx-2" href="/tables" role="button">
+        <i class="fas fa-utensils"></i> Tables</a>
     </p>
   </div>
   <div class="container">
@@ -47,5 +54,9 @@
       <button type="submit" class="btn btn-primary mb-4">Submit</button>
     </form>
   </div>
+  <script type="text/javascript">
+
+  </script>
 </body>
+
 </html>
