--- a/public/reservations.html
+++ b/public/reservations.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.css" />
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
   <title>Document</title>
 </head>
 <body>
@@ -44,8 +45,30 @@
           <option>8</option>
         </select>
       </div>
-      <button type="submit" class="btn btn-primary mb-4">Submit</button>
+      <button type="submit" class="btn btn-primary mb-4" id="submit">Submit</button>
     </form>
   </div>
 </body>
 </html>
+
+<script type="text/javascript">
+  $('#submit').on('click', function(event){
+    event.preventDefault()
+    
+    let reservationRequest = {
+      name: $('#name').val().trim(),
+      phoneNumber: $('#phoneNumber').val().trim(),
+      email: $('#email').val().trim(),
+      numberOfPeople: $('#numberOfPeople').val()
+    }
+    
+    $.post('api/tables', reservationRequest, function(response){
+      console.log(response)
+      if(response) {
+        alert('Your table is ready!')
+      } else {
+        alert('You are on the waitlist')
+      }
+    })
+  })
+</script>
