added in code to trim input after submit

--- a/public/reservations.html
+++ b/public/reservations.html
@@ -65,14 +65,20 @@
       numberOfPeople: $('#numberOfPeople').val()
     }
     
+    
     $.post('api/tables', reservationRequest, function(response){
       console.log(response)
       if(response) {
         alert('Your table is ready!')
       } else {
-        alert('You are on the waitlist')
+        alert('You are on the waitlist');
       }
-    })
+      //clear form when submitting
+      $("#name").val("");
+      $("#phoneNumber").val("");
+      $("#email").val("");
+      $("#numberOfPeople").val("1");
+    });
   })
   </script>
 </body>
