added in footer

--- a/public/index.html
+++ b/public/index.html
@@ -34,5 +34,10 @@
 	</div>
 
 </body>
+<footer>
+	<div class="container text-center">
+		<p><a href="/api/tables">API Table Link</a> | <a href="/api/reservations">API Reservations and WaitList</a></p>
+	</div>
+</footer>
 
 </html>
