--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html>
 
 <head>
@@ -6,6 +6,7 @@
 	<!--Bootstrap-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
 	 crossorigin="anonymous">
+	<link rel="stylesheet" href="./css/style.css">
 	<!-- Font Awesome -->
 	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 	<!-- Jquery -->
@@ -16,7 +17,7 @@
 <body>
 	<div class="jumbotron">
 		<h1 class="display-4 text-center">
-			<i class="fas fa-fire"></i> Hot Resturant </h1>
+			<i class="fas fa-fire"></i> Eat Easy</h1>
 
 		<hr class="my-4">
 
